cli/tests/error_012_bad_dynamic_import_specifier.ts.out
Check [WILDCARD]error_012_bad_dynamic_import_specifier.ts
error: Uncaught (in promise) TypeError: Relative import path "bad-module.ts" not prefixed with / or ./ or ../ from "[WILDCARD]/error_012_bad_dynamic_import_specifier.ts"
  const _badModule = await import("bad-module.ts");
                     ^
    at async file:///[WILDCARD]/error_012_bad_dynamic_import_specifier.ts:2:22
